--- a/deploy/olm-catalog/test/8.0.5-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/8.0.5-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/bamoe-8-rhpam-rhel8-operator:8.0.5
-    createdAt: "2024-03-19 13:12:19"
+    createdAt: "2024-04-12 12:40:30"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     features.operators.openshift.io/disconnected: "false"
@@ -27,7 +27,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.5-1-dev-7lnqgrcz57
+  name: bamoe-businessautomation-operator.8.0.5-1-dev-p8c7gsm8f6
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -408,7 +408,7 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-7lnqgrcz57
+    operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-p8c7gsm8f6
   links:
   - name: Product Page
     url: https://ibm.com
@@ -420,9 +420,9 @@ spec:
   maturity: test
   provider:
     name: IBM
-  replaces: bamoe-businessautomation-operator.8.0.4-3
+  replaces: bamoe-businessautomation-operator.8.0.5-3
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-7lnqgrcz57
-  version: 8.0.5-1+7lnqgrcz57
+      operated-by: bamoe-businessautomation-operator.8.0.5-1-dev-p8c7gsm8f6
+  version: 8.0.5-1+p8c7gsm8f6
